--- a/case-studies/Case-study.html
+++ b/case-studies/Case-study.html
@@ -30,7 +30,7 @@
     <!-- Navbar -->
     <header class="navbar">
         <nav class="glass">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span class="logo-primary">M</span>uatasim<span class="logo-accent">.</span>
             </a>
 
@@ -224,10 +224,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#projects">Projects</a></li>
-                        <li><a href="case-studies.html">Case Studies</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../blog/index.html">Blogs</a></li>
+                        <li><a href="../gigs/Main-services.html">Gigs</a></li>
+                        <li><a href="../Pricing/pricing.html">pricing</a></li>
                     </ul>
                 </div>
 
