--- a/case-studies/story-fiverr-algorithm.html
+++ b/case-studies/story-fiverr-algorithm.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEO Cracking the Fiverr Algorithm: What Actually Works - Muatasim Billah</title>
-    <meta name="description" content="Learn the exact Fiverr SEO workflow that gets gigs ranked on page 1. Step-by-step breakdown of proven strategies for keyword research, tags, descriptions, and hidden optimization techniques that actually work.">
-        <link rel="stylesheet" href="/css-Case-studies/fiverr-algorithm.css">
+    <title>Cracking the Fiverr Algorithm: Proven SEO Strategies for Gig Ranking | Muatasim Billah</title>
+    <meta name="description" content="Discover the exact Fiverr SEO workflow to rank your gigs on page 1. Learn step-by-step strategies for keyword research, tags, descriptions, and hidden optimization techniques that deliver real results.">
+    <meta name="keywords" content="Fiverr SEO, Fiverr algorithm, gig ranking, keyword research, gig optimization, audio editing, freelance success, Muatasim Billah">
+    <link rel="canonical" href="https://meharportfolio.com/case-studies/story-fiverr-algorithm.html">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Cracking the Fiverr Algorithm: Proven SEO Strategies for Gig Ranking | Muatasim Billah">
+    <meta property="og:description" content="Step-by-step Fiverr SEO workflow for page 1 gig rankings. Real strategies for keyword research, tags, descriptions, and more.">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://meharportfolio.com/case-studies/story-fiverr-algorithm.html">
+    <meta property="og:image" content="https://meharportfolio.com/images/fiverr-seo-thumbnail.jpg">
+    <meta property="og:site_name" content="Muatasim Billah Portfolio">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Cracking the Fiverr Algorithm: Proven SEO Strategies for Gig Ranking">
+    <meta name="twitter:description" content="Learn the exact Fiverr SEO workflow for page 1 gig rankings. Real strategies for keyword research, tags, descriptions, and more.">
+    <meta name="twitter:image" content="https://meharportfolio.com/images/fiverr-seo-thumbnail.jpg">
+    <meta name="twitter:site" content="@Mehardesigner">
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "Cracking the Fiverr Algorithm: Proven SEO Strategies for Gig Ranking",
+      "description": "Step-by-step Fiverr SEO workflow for page 1 gig rankings. Real strategies for keyword research, tags, descriptions, and more.",
+      "image": "https://meharportfolio.com/images/fiverr-seo-thumbnail.jpg",
+      "author": {
+        "@type": "Person",
+        "name": "Muatasim Billah"
+      },
+      "datePublished": "2025-08-07",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Muatasim Billah Portfolio",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://meharportfolio.com/images/logo.png"
+        }
+      },
+      "mainEntityOfPage": "https://meharportfolio.com/case-studies/story-fiverr-algorithm.html"
+    }
+    </script>
+    <link rel="stylesheet" href="/css-Case-studies/fiverr-algorithm.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
