--- a/explore-gigs/audio-engineering.html
+++ b/explore-gigs/audio-engineering.html
@@ -4,9 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Engineering Services - Professional Mixing & Mastering | Muatasim Billah</title>
-    <meta name="description"
-        content="Professional audio engineering services including mixing, mastering, podcast editing, and audio restoration. High-quality results with fast delivery.">
+    <title>Best Audio Engineering Services 2025 | Mixing, Mastering, Podcast Editing, Restoration - Muatasim Billah</title>
+    <meta name="description" content="Killer audio engineering services for 2025: professional mixing, mastering, podcast editing, audio restoration, vocal tuning, and more. Get industry-standard sound for music, podcasts, audiobooks, and video. Fast delivery, unlimited revisions, trending techniques.">
+    <meta name="keywords" content="audio engineering, mixing, mastering, podcast editing, audio restoration, vocal tuning, music production, sound design, audio services, professional audio, trending audio services, best audio engineer 2025, Muatasim Billah, FLAC, WAV, MP3, unlimited revisions, fast delivery, pro studio, industry standard, audio for YouTube, Spotify, Apple Music, TikTok, trending audio gigs, Fiverr audio, Upwork audio, freelance audio engineer, top audio engineer, audio enhancement, audio cleanup, radio, streaming, audiobook editing, video audio, creative effects, dynamic range, stereo imaging, commercial audio, best mixing service, best mastering service, 2025 audio trends">
+    <link rel="canonical" href="https://muatasimbillah.com/explore-gigs/audio-engineering.html">
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Best Audio Engineering Services 2025 | Mixing, Mastering, Podcast Editing, Restoration - Muatasim Billah">
+    <meta property="og:description" content="Killer audio engineering services for 2025: mixing, mastering, podcast editing, restoration, vocal tuning, and more. Get pro sound for music, podcasts, audiobooks, and video. Fast delivery, unlimited revisions, trending techniques.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://muatasimbillah.com/explore-gigs/audio-engineering.html">
+    <meta property="og:image" content="https://muatasimbillah.com/images/Audio%20engineering%20gig%20image%20by%20muatasim%20billah.jpg">
+    <meta property="og:site_name" content="Muatasim Billah Portfolio">
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Best Audio Engineering Services 2025 | Mixing, Mastering, Podcast Editing, Restoration - Muatasim Billah">
+    <meta name="twitter:description" content="Killer audio engineering services for 2025: mixing, mastering, podcast editing, restoration, vocal tuning, and more. Get pro sound for music, podcasts, audiobooks, and video. Fast delivery, unlimited revisions, trending techniques.">
+    <meta name="twitter:image" content="https://muatasimbillah.com/images/Audio%20engineering%20gig%20image%20by%20muatasim%20billah.jpg">
+    <meta name="twitter:site" content="@muatasimbillah">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Best Audio Engineering Services 2025 | Mixing, Mastering, Podcast Editing, Restoration - Muatasim Billah",
+      "description": "Killer audio engineering services for 2025: professional mixing, mastering, podcast editing, audio restoration, vocal tuning, and more. Get industry-standard sound for music, podcasts, audiobooks, and video. Fast delivery, unlimited revisions, trending techniques.",
+      "provider": {
+        "@type": "Person",
+        "name": "Muatasim Billah",
+        "url": "https://muatasimbillah.com"
+      },
+      "areaServed": "Worldwide",
+      "serviceType": ["Audio Mixing", "Audio Mastering", "Podcast Editing", "Audio Restoration", "Vocal Tuning", "Music Production", "Sound Design"],
+      "keywords": ["audio engineering", "mixing", "mastering", "podcast editing", "audio restoration", "vocal tuning", "music production", "sound design", "audio services", "professional audio", "trending audio services", "best audio engineer 2025", "Muatasim Billah", "FLAC", "WAV", "MP3", "unlimited revisions", "fast delivery", "pro studio", "industry standard", "audio for YouTube", "Spotify", "Apple Music", "TikTok", "trending audio gigs", "Fiverr audio", "Upwork audio", "freelance audio engineer", "top audio engineer", "audio enhancement", "audio cleanup", "radio", "streaming", "audiobook editing", "video audio", "creative effects", "dynamic range", "stereo imaging", "commercial audio", "best mixing service", "best mastering service", "2025 audio trends"],
+      "image": "https://muatasimbillah.com/images/Audio%20engineering%20gig%20image%20by%20muatasim%20billah.jpg",
+      "url": "https://muatasimbillah.com/explore-gigs/audio-engineering.html",
+      "offers": {
+        "@type": "Offer",
+        "priceCurrency": "USD",
+        "price": "5",
+        "availability": "https://schema.org/InStock",
+        "url": "https://muatasimbillah.com/explore-gigs/audio-engineering.html"
+      }
+    }
+    </script>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
