--- a/index.html
+++ b/index.html
@@ -3,8 +3,49 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <title>Muatasim Billah | Portfolio</title>
-    <meta name="description" content="Portfolio website showcasing work in graphic design, digital marketing, Shopify development, and more.">
+    <title>Muatasim Billah Portfolio | Mutasim Portfolio | Mehar Designer | AI, Shopify, Web, Audio, Canva, Avatars</title>
+    <meta name="description" content="Official portfolio of Muatasim Billah (Mehar Designer). Explore top skills: Shopify development, web design, audio engineering, AI voiceover, talking avatars, Canva graphic design, frontend development, and more. Hire for trending digital services in 2025.">
+    <meta name="keywords" content="Muatasim Billah portfolio, Mutasim portfolio, Mehar Designer, Muatasim Billah, Meharportfolio, mehar designer, shopify expert, shopify developer, web designer, frontend developer, audio engineer, AI voiceover, talking avatars, Canva expert, graphic designer, digital marketing, freelance designer, Fiverr, Upwork, trending portfolio 2025, best portfolio, creative portfolio, AI content creation, voice recorder, audio cutter, QR code generator, image compressor, video to audio, social media design, branding, UI/UX, HTML5, CSS3, JavaScript, 11Labs, D-ID, HeyGen, Synthesia, podcast editing, audiobook editing, professional mixing, mastering, unlimited revisions, fast delivery">
+    <link rel="canonical" href="https://muatasimbillah.com/index.html">
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Muatasim Billah Portfolio | Mutasim Portfolio | Mehar Designer | AI, Shopify, Web, Audio, Canva, Avatars">
+    <meta property="og:description" content="Official portfolio of Muatasim Billah (Mehar Designer). Explore top skills: Shopify development, web design, audio engineering, AI voiceover, talking avatars, Canva graphic design, frontend development, and more. Hire for trending digital services in 2025.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://muatasimbillah.com/index.html">
+    <meta property="og:image" content="https://muatasimbillah.com/images/Hero%20section%20Png%20image%20Of%20muatasim%20%20Billah%20(1).jpg">
+    <meta property="og:site_name" content="Muatasim Billah Portfolio">
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Muatasim Billah Portfolio | Mutasim Portfolio | Mehar Designer | AI, Shopify, Web, Audio, Canva, Avatars">
+    <meta name="twitter:description" content="Official portfolio of Muatasim Billah (Mehar Designer). Explore top skills: Shopify development, web design, audio engineering, AI voiceover, talking avatars, Canva graphic design, frontend development, and more. Hire for trending digital services in 2025.">
+    <meta name="twitter:image" content="https://muatasimbillah.com/images/Hero%20section%20Png%20image%20Of%20muatasim%20%20Billah%20(1).jpg">
+    <meta name="twitter:site" content="@muatasimbillah">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Muatasim Billah",
+      "alternateName": ["Mutasim Portfolio", "Mehar Designer", "Meharportfolio"],
+      "url": "https://muatasimbillah.com/index.html",
+      "image": "https://muatasimbillah.com/images/Hero%20section%20Png%20image%20Of%20muatasim%20%20Billah%20(1).jpg",
+      "jobTitle": "Multi-skilled Digital Expert",
+      "description": "Official portfolio of Muatasim Billah (Mehar Designer). Top skills: Shopify development, web design, audio engineering, AI voiceover, talking avatars, Canva graphic design, frontend development, and more. Hire for trending digital services in 2025.",
+      "sameAs": [
+        "https://www.fiverr.com/mehar_ai_studio?public_mode=true",
+        "https://www.upwork.com/freelancers/~01d27ff9dd0dbefaaf?viewMode=1",
+        "https://github.com/Mehardesigner/Meharportfolio",
+        "https://web.facebook.com/profile.php?id=100095466197402",
+        "https://www.youtube.com/channel/UCtg52ZzH02pfjfh31a7wA2Q"
+      ],
+      "knowsAbout": [
+        "Shopify development", "Web design", "Audio engineering", "AI voiceover", "Talking avatars", "Canva graphic design", "Frontend development", "Digital marketing", "Graphic design", "UI/UX", "Branding", "HTML5", "CSS3", "JavaScript", "Podcast editing", "Audiobook editing", "Professional mixing", "Mastering", "AI content creation", "Voice recorder", "Audio cutter", "QR code generator", "Image compressor", "Video to audio", "Social media design"
+      ],
+      "keywords": [
+        "Muatasim Billah portfolio", "Mutasim portfolio", "Mehar Designer", "shopify expert", "web designer", "audio engineer", "AI voiceover", "Canva expert", "graphic designer", "digital marketing", "Fiverr", "Upwork", "trending portfolio 2025", "best portfolio", "creative portfolio", "AI content creation", "voice recorder", "audio cutter", "QR code generator", "image compressor", "video to audio", "social media design", "branding", "UI/UX", "HTML5", "CSS3", "JavaScript", "11Labs", "D-ID", "HeyGen", "Synthesia", "podcast editing", "audiobook editing", "professional mixing", "mastering", "unlimited revisions", "fast delivery"
+      ]
+    }
+    </script>
     <script src="preloader.js"></script>
     <!-- Critical CSS for immediate mobile responsive layout -->
     <style>
@@ -791,7 +832,7 @@
       <!-- Frontend Project -->
       <div class="project-item glass" data-categories="frontend">
         <div class="project-image">
-          <img src="images\Web Devolpment project section  image  by Muatasim Billah.png" alt="Web Development">
+          <img src="images/Web Development project section  image  by Muatasim Billah.png" alt="Web Development">
           <div class="project-overlay">
             <a href="projects/web-development.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project
@@ -946,13 +987,13 @@
           <div class="service-icon">
             <i class="fas fa-bullhorn"></i>
           </div>
-          <h3>Ai voiceover</h3>
-          <p>Ai voiceover human like realistic Ai voiceover </p>
+          <h3>AI Voiceover</h3>
+          <p>AI voiceover human-like realistic AI voiceover</p>
           <ul class="service-list">
-            <li>For content creators</li>
-            <li>Tiktok videos</li>
-            <li>Instagram videos</li>
-            <li>for story telling</li>
+            <li>For Content Creators</li>
+            <li>TikTok Videos</li>
+            <li>Instagram Videos</li>
+            <li>For Storytelling</li>
           </ul>
           <a href="#contact" class="btn-primary service-btn">Get Started</a>
         </div>
@@ -991,13 +1032,13 @@
           <div class="service-icon">
             <i class="fas fa-code"></i> <!-- Web development icon -->
           </div>
-          <h3>Frontend web Development</h3>
-          <p>Complete Frontend website Of Html,Css, & Java Script Professional website</p>
+          <h3>Frontend Web Development</h3>
+          <p>Complete frontend website of HTML, CSS, & JavaScript. Professional website.</p>
           <ul class="service-list">
-            <li>Smart seo</li>
+            <li>Smart SEO</li>
             <li>Animations</li>
-            <li>Attractive navbar</li>
-            <li>Footor Links</li>
+            <li>Attractive Navbar</li>
+            <li>Footer Links</li>
           </ul>
           <a href="#contact" class="btn-primary service-btn">Get Started</a>
         </div>
@@ -1236,7 +1277,7 @@
             <span class="tag">Fiverr Upwork</span>
             <span class="tag">freelancing</span>
           </div>
-          <h3>Hardsest Project</h3>
+          <h3>Hardest Project</h3>
           <p>The Most Difficult Project in My Freelancing Journey</p>
           <div class="case-metric-preview">
             <i class="fas fa-chart-line"></i>
@@ -1272,7 +1313,7 @@
             <span class="tag">Secret</span>
             <span class="tag">Fiverr</span>
           </div>
-          <h3>How to win Fievrr Game</h3>
+          <h3>How to win Fiverr Game</h3>
           <p>What I Learned from Fiverr SECRETS</p>
           <div class="case-metric-preview">
             <i class="fas fa-robot"></i>
